src/test/resources/plang-strict/parse-error/007_vardecl_nameclash.plang
**#Semantic error: name already in use
**FirstErrorLoc:6,9
program vardecl_nameclash
    Változók:
        x: Egész,
        x: Egész
    x := 1
program_vége
